compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__type_variables_in_body.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1004
expression: "\npub type Box(a) {\n  Box(value: a)\n}\npub fn go(box1: Box(a), box2: Box(b)) {\n  let _: Box(a) = box2\n  let _: Box(b) = box1\n  5\n}"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:6:19
  │
6 │   let _: Box(a) = box2
  │                   ^^^^

Expected type:

    Box(a)

Found type:

    Box(b)


